--- a/r3g.config
+++ b/r3g.config
@@ -6027,7 +6027,7 @@ CONFIG_PACKAGE_wpad-basic-wolfssl=y
 # CONFIG_BAIDUPCS_WEB_COMPRESS_UPX is not set
 # CONFIG_PACKAGE_banip is not set
 # CONFIG_PACKAGE_batctl-default is not set
-# CONFIG_PACKAGE_batctl-full is not set
+CONFIG_PACKAGE_batctl-full=y
 # CONFIG_PACKAGE_batctl-tiny is not set
 # CONFIG_PACKAGE_beanstalkd is not set
 # CONFIG_PACKAGE_bmon is not set
