--- a/.github/workflows/build-MIR3G.yml
+++ b/.github/workflows/build-MIR3G.yml
@@ -36,6 +36,7 @@ env:
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: false
+  UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
 
 jobs:
