--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build immortalwrt
+name: Build MiR3G
 on:
   repository_dispatch:
   workflow_dispatch:
