--- a/r3g.config
+++ b/r3g.config
@@ -3266,7 +3266,7 @@ CONFIG_PACKAGE_luci-lib-fs=y
 #
 # Database
 #
-CONFIG_PACKAGE_libmariadb3＝y
+# CONFIG_PACKAGE_libmariadb is not set
 # CONFIG_PACKAGE_libpq is not set
 # CONFIG_PACKAGE_libpqxx is not set
 CONFIG_PACKAGE_libsqlite3=y
