--- a/r3g.config
+++ b/r3g.config
@@ -6388,8 +6388,8 @@ CONFIG_PACKAGE_unzip=y
 #
 # Database
 #
-CONFIG_PACKAGE_mariadb-client=y
-CONFIG_PACKAGE_mariadb-server-base=y
+# CONFIG_PACKAGE_mariadb-client is not set
+# CONFIG_PACKAGE_mariadb-server-base is not set
 # CONFIG_PACKAGE_pgsql-cli is not set
 # CONFIG_PACKAGE_pgsql-cli-extra is not set
 # CONFIG_PACKAGE_pgsql-server is not set
