--- a/r3g.config
+++ b/r3g.config
@@ -3266,7 +3266,7 @@ CONFIG_PACKAGE_luci-lib-fs=y
 #
 # Database
 #
-# CONFIG_PACKAGE_libmariadb is not set
+CONFIG_PACKAGE_libmariadb=y
 # CONFIG_PACKAGE_libpq is not set
 # CONFIG_PACKAGE_libpqxx is not set
 CONFIG_PACKAGE_libsqlite3=y
@@ -6388,7 +6388,7 @@ CONFIG_PACKAGE_unzip=y
 #
 # Database
 #
-# CONFIG_PACKAGE_mariadb-client is not set
+CONFIG_PACKAGE_mariadb-client=y
 # CONFIG_PACKAGE_mariadb-server-base is not set
 # CONFIG_PACKAGE_pgsql-cli is not set
 # CONFIG_PACKAGE_pgsql-cli-extra is not set
