--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -19,7 +19,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL:  https://github.com/Lienol/openwrt
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: r3g.config
