--- a/files/etc/lcd4linux.conf
+++ b/files/etc/lcd4linux.conf
@@ -462,7 +462,7 @@ Widget NetBar {
 Widget UpText {
 	class 'Text'
 	expression uptime('%dd %H:%M:%S')
-	prefix 'Run: '
+	prefix 'Run:'
 	width 19
 	align 'L'
 	update tick
@@ -470,10 +470,10 @@ Widget UpText {
 	Background 'FFFFFF00'
 }
 
-Widget WanText {
+Widget WANText {
 	class 'Text'
-	expression netinfo::ipaddr('wlan0')
-	prefix 'Wan: '
+	expression netinfo::ipaddr('wan')
+	prefix 'WAN:'
 	width 19
 	align 'L'
 	update minute
@@ -481,10 +481,10 @@ Widget WanText {
 	Background 'FFFFFF00'
 }
 
-Widget IPText {
+Widget LANText {
 	class 'Text'
 	expression netinfo::ipaddr('br-lan')
-	prefix 'Ip: '
+	prefix 'LAN:'
 	width 19
 	align 'L'
 	update minute
@@ -499,7 +499,7 @@ Display 'DPF'
 Layout mylayout {
 	Row02.Col40 'Kernel1'
 	Row03.Col40 'Kernel2'
-        Row04.Col40 'Kernel3' 
+  Row04.Col40 'Kernel3' 
 	Row06.Col40 'CPUText'
 	Row07.Col40 'CPUBar'
 	Row09.Col40 'LoadText'
@@ -517,34 +517,34 @@ Layout mylayout {
 	Row25.Col40 'NetText2'
 	Row26.Col40 'NetBar'
 	Row29.Col37 'UpText'
-	Row29.Col23 'IPText'
-        Row29.Col02 'WanText'
+	Row29.Col21 'LANText'
+  Row29.Col02 'WANText'
 
 
     Layer 2 {
 	X1.Y1 'Bgnd'
 }
      Layer 0 {
-        X14.Y10 'Year1'
+  X14.Y10 'Year1'
 	X14.Y24 'Year2'
 	X14.Y38 'Year3'
 	X14.Y52 'Year4'
-        X17.Y68 'Year5'
+  X17.Y68 'Year5'
 	X14.Y78 'Month1'
 	X14.Y92 'Month2'
-        X17.Y106 'Year5'
-        X14.Y115 'Day1'
+  X17.Y106 'Year5'
+  X14.Y115 'Day1'
 	X14.Y128 'Day2'
 	X13.Y147 'Week1'
 	X170.Y22 'Hour1'
 	X170.Y61 'Hour2'
-        X182.Y103 'Hourdot'         
+  X182.Y103 'Hourdot'         
 	X200.Y103 'Hourdot'
 	X170.Y116 'Minute1'
 	X170.Y154 'Minute2'
 	X175.Y193 'Second1'
 	X175.Y202 'Second2'
-        X39.Y10 'logo'
+  X39.Y10 'logo'
 	X39.Y50 'gongsi'
 	X80.Y28 'erweima'
 	X80.Y120 'erweima1'
