--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -1,35 +1,66 @@
-#
-# Copyright (c) 2019-2020 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
-# https://github.com/P3TERX/Actions-OpenWrt
-# Description: Build OpenWrt using GitHub Actions
-#
+####################################
+#  update for 2022/02/08 00:14:52  #
+####################################
+name: 编译固件R3G_immortalwrt
 
-name: Build MiR3G
-on:
+on: 
   repository_dispatch:
   workflow_dispatch:
     inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-
-env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: r3g.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: false
-  UPLOAD_WETRANSFER: false
-  UPLOAD_RELEASE: true
+      resource_directory:
+        type: choice
+        description: '路由器资源目录'
+        options:
+          - "Newifi-D1"
+          - "XIAOMI-R3G"
+      repo_branch:
+        type: choice
+        description: '版本分支'
+        options:
+          - "master"
+          - "openwrt-18.06"
+          - "openwrt-18.06-dev"
+          - "openwrt-18.06-k5.4"
+          - "openwrt-21.02"
+      feeds_file:
+        type: choice
+        description: '替换软件源配置(feeds.conf.default)'
+        options:
+        - "true"
+        - "false"
+      config_file:
+        description: 'config 文件名称(.config)'
+        default: '.config'
+      files_path:
+        type: choice
+        description: '导入补丁目录(files目录)'
+        options:
+        - "true"
+        - "false"
+      openwrt_patch:
+        type: choice
+        description: '执行仓库脚本(openwrt_patch.sh)'
+        options:
+        - "true"
+        - "false"
+      befor_patch:
+        type: choice
+        description: '执行编译前脚本(make_befor.sh)'
+        options:
+        - "true"
+        - "false"
+      after_patch:
+        type: choice
+        description: '执行编译后脚本(make_after.sh)'
+        options:
+        - "true"
+        - "false"
+      upload_release:
+        type: choice
+        description: '发布到release'
+        options:
+        - "false"
+        - "true"
   TZ: Asia/Shanghai
 
 jobs:
