--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -20,7 +20,14 @@ on:
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_BRANCH: master
+  REPO_BRANCH:
+type: choice
+   ptions:
+          - "master"
+          - "openwrt-18.06"
+          - "openwrt-18.06-dev"
+          - "openwrt-18.06-k5.4"
+          - "openwrt-21.02"
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: r3g.config
   DIY_P1_SH: diy-part1.sh
