--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -66,7 +66,8 @@ on:
         options:
         - "false"
         - "true"
-      TZ: Asia/Shanghai
+env:
+  TIMEZONE: Asia/Shanghai
 jobs:
   build:
     runs-on: ubuntu-20.04
