--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -20,7 +20,7 @@ on:
 
 env:
   REPO_URL: https://github.com/kenzok78/immortalwrt
-  REPO_BRANCH: opnwrt-21.02
+  REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: r3g.config
   DIY_P1_SH: diy-part1.sh
