--- a/r3g.config
+++ b/r3g.config
@@ -4196,7 +4196,7 @@ CONFIG_PACKAGE_liblucihttp-lua=y
 # CONFIG_PACKAGE_libmicrohttpd-ssl is not set
 # CONFIG_PACKAGE_libmicrosocks11 is not set
 # CONFIG_PACKAGE_libmilter-sendmail is not set
-# CONFIG_PACKAGE_libminiupnpc is not set
+CONFIG_PACKAGE_libminiupnpc=y
 # CONFIG_PACKAGE_libmms is not set
 CONFIG_PACKAGE_libmnl=y
 # CONFIG_PACKAGE_libmodbus is not set
@@ -5340,7 +5340,7 @@ CONFIG_PACKAGE_iptables-mod-tproxy=y
 # CONFIG_IPTGEOIP_PRESERVE is not set
 # end of Select iptgeoip options
 
-# CONFIG_PACKAGE_miniupnpc is not set
+CONFIG_PACKAGE_miniupnpc=y
 CONFIG_PACKAGE_miniupnpd=y
 # CONFIG_PACKAGE_natpmpc is not set
 # CONFIG_PACKAGE_nftables-json is not set
