--- a/r3g.config
+++ b/r3g.config
@@ -6328,7 +6328,7 @@ CONFIG_PACKAGE_wwan=y
 # CONFIG_PACKAGE_moc is not set
 # CONFIG_PACKAGE_mpc is not set
 # CONFIG_PACKAGE_mpd-avahi-service is not set
-# CONFIG_PACKAGE_mpd-full is not set
+CONFIG_PACKAGE_mpd-full=y
 # CONFIG_PACKAGE_mpd-mini is not set
 # CONFIG_PACKAGE_mpg123 is not set
 # CONFIG_PACKAGE_opus-tools is not set
