--- a/r3g.config
+++ b/r3g.config
@@ -6601,7 +6601,7 @@ CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
 # CONFIG_PACKAGE_YSFGateway is not set
 # CONFIG_PACKAGE_YSFParrot is not set
 # CONFIG_PACKAGE_YSFReflector is not set
-CONFIG_PACKAGE_YSF2DMR=y
+# CONFIG_PACKAGE_YSF2DMR is not set
 
 #
 # Translations
