--- a/r3gipk.config
+++ b/r3gipk.config
@@ -1,3 +1,21 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-3g=y
+#
+# MMDVM
+#
+CONFIG_PACKAGE_dapnet-gateway=y
+CONFIG_PACKAGE_ircddb-gateway=y
+CONFIG_PACKAGE_libmmdvm=y
+CONFIG_PACKAGE_libwxwidgets=y
+CONFIG_PACKAGE_mmdvm=y
+CONFIG_PACKAGE_mmdvm-cal=y
+CONFIG_PACKAGE_mmdvm-host=y
+CONFIG_PACKAGE_mmdvm-luci=y
+CONFIG_LUCI_APP_MMDVM=y
+CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
+# CONFIG_PACKAGE_DGIdGateway is not set
+# CONFIG_PACKAGE_YSFGateway is not set
+# CONFIG_PACKAGE_YSFParrot is not set
+# CONFIG_PACKAGE_YSFReflector is not set
+CONFIG_PACKAGE_YSF2DMR=y
