--- a/r3gipk.config
+++ b/r3gipk.config
@@ -19,3 +19,11 @@ CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
 # CONFIG_PACKAGE_YSFParrot is not set
 # CONFIG_PACKAGE_YSFReflector is not set
 CONFIG_PACKAGE_YSF2DMR=y
+#
+# Translations
+#
+CONFIG_LUCI_LANG_zh-cn=y
+CONFIG_PACKAGE_mmdvm-luci-i18n-zh-cn=y
+CONFIG_PACKAGE_nxdn-clients=y
+CONFIG_PACKAGE_p25-clients=y
+CONFIG_PACKAGE_ysf-clients=y
