--- a/r3gipk.config
+++ b/r3gipk.config
@@ -17,7 +17,7 @@ CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
 # CONFIG_PACKAGE_DGIdGateway is not set
 # CONFIG_PACKAGE_YSFGateway is not set
 # CONFIG_PACKAGE_YSFParrot is not set
-CONFIG_PACKAGE_YSFReflector=y
+# CONFIG_PACKAGE_YSFReflector is not set
 # CONFIG_PACKAGE_YSF2DMR is not set
 CONFIG_PACKAGE_mmdvm-crossmode=y
 #
